--- a/intranet/htdocs/intranet-tmpl/admin/feriados.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/feriados.tmpl
@@ -213,9 +213,7 @@
 </script>
 
 <fieldset>
-    <legend class="titulos">[% "Pr&oacute;ximos Feriados" | i18n %]</legend>
-
-    <div id="proximosFeriados"></div><br />
+    <legend class="titulos">[% "Feriados" | i18n %]</legend>  
 
     <div id="calendarioFeriados"></div><br />
 
@@ -228,6 +226,9 @@
         <button type="submit" id="mostrarFeriadosTotales" class="btn btn-info" style="display:none;">
             <i id="mostrarFeriadosTotalesIcon" class="icon-white icon-eye-open"></i> [% 'Mostrar feriados originales' | i18n %]</button>
     </form>
+
+    <legend class="titulos">[% "Pr&oacute;ximos Feriados" | i18n %]</legend> 
+    <div id="proximosFeriados"></div><br />
 
 </fieldset>
 
