--- a/intranet/htdocs/intranet-tmpl/admin/proximosFeriados.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/proximosFeriados.tmpl
@@ -1,6 +1,6 @@
 <div>
     <fieldset>
-    <div style="max-height:150px; overflow-y:scroll;">
+    <div style="max-height:300px; overflow-y:auto;">
 	    <dl class="dl-horizontal">
 	        [% FOREACH fecha IN proximos_feriados %]
 	            <dt>[% fecha.getFecha %]:</dt>
