--- a/dev-plugins/bootstrapless/opac/DIF/meranFiles.less
+++ b/dev-plugins/bootstrapless/opac/DIF/meranFiles.less
@@ -31,5 +31,6 @@
 ../../hero-unit.less
 ../../utilities.less
 ../../responsive.less
-../general.less
+ ../../docs.less
+ ../general.less
 propio.less
