--- a/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
@@ -30,6 +30,15 @@
 
 </script>
 
+<script type="text/javascript" src="/intranet-tmpl/includes/busquedaPreferencias.js"></script>
+   
+<style type="text/css"> 
+    .buscadorPreferenciasClass{
+        float: right;
+        margin-top: -51px;
+    }
+</style> 
+
 [% INCLUDE 'editorHTML.inc' %]
 
 <form   id="formPreferencias" class="form-horizontal" 
@@ -39,6 +48,9 @@
     <fieldset class="resultados_busqueda">
     <legend>[% "Administraci&oacute;n de preferencias de Circulaci&oacute;n" | i18n %]</legend>
 
+        <div class="buscadorPreferenciasClass">
+            <input name="buscador" id="buscadorPreferencias" type="text" placeholder="Ingrese la preferencia a buscar">
+        </div>
     
             [% FOREACH preferencia IN preferencias %]
             
@@ -83,6 +95,7 @@
                             ) ;
         [% END %]
     </div>
+    <div class="alert alert-info" id="mensajePreferenciasNoEncontradas">[% 'No se encontraron preferencias' | i18n %]</div>
 </form>
 
 [% INCLUDE "intranet-bottom.inc" %]
