cambios temporales intranet/modules/C4/AR/Usuarios.pm

--- a/intranet/htdocs/intranet-tmpl/admin/ayudaMarcAjax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ayudaMarcAjax.tmpl
@@ -43,7 +43,7 @@
 
 <div class="form-actions">
 
-    <a class="btn btn-success click" onclick="agregarAyudaMarcShow()">
+    <a class="btn btn-primary click" onclick="agregarAyudaMarcShow()">
         <i class="icon-plus-sign icon-white"></i> 
         [% 'Agregar ayuda' | i18n %]
     </a>
