--- a/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
@@ -71,7 +71,7 @@ i18n %]
             </div>
             <hr>
             <div id="pie" padding:"40px">
-                      [% "Biblioteca: " | i18n  %] [% biblio.getNombrePDF %]<br>
+                      [% "Biblioteca: " | i18n  %] [% biblio.getNombre %]<br>
                       [% "Direcci&oacute;n:" | i18n  %]  [% biblio.getDireccionPDF %]<br>
                       [% "Tel/Fax:" | i18n  %]  [% biblio.telefono %]  [% IF biblio.fax %] / [% biblio.fax %][% END %]  <br>
                       [% "Atenci&oacute;n: Lunes a Viernes " | i18n  %][% atencion %] <br>
