--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -27,7 +27,7 @@
                    print C4::AR::Filtros::action_button( 
                                                    button       => "btn btn-primary click",
                                                    action       => "responderMail()", 
-                                                   icon         => "icon-white icon-share",
+                                                   icon         => "icon-white icon-ok",
                                                    title        => "[% 'Enviar' | i18n %]",
                                                ) ;
            
@@ -36,9 +36,9 @@
   <div id="btn_responder" class="left">
     [% PERL %]
                 print C4::AR::Filtros::action_button( 
-                                                button         => "btn click",
+                                                button         => "btn btn-success click",
                                                 action       => "responder()", 
-                                                icon         => "icon-share",
+                                                icon         => "icon-white icon-share-alt",
                                                 title        => "[% 'Responder' | i18n %]",
                                             ) ;
         
