--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -112,7 +112,7 @@ var jobID = 0;
       </div>
 
       <div class="modal-footer">
-          <button type="submit" id="publicar_twitter" class="btn btn-primary" onclick="publicar_twitter();"><i class="icon-white icon-thumbs-up"></i> [% 'Tweetear' | i18n %]</button>
+          <button type="submit" id="publicar_twitter" class="btn btn-primary" onclick="publicar_twitter();"><i class="icon-white icon-ok"></i> [% 'Tweetear' | i18n %]</button>
       </div>
 </div>   
 
