--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -204,7 +204,7 @@
              */
             var fd = new FormData();
             fd.append("id2", id2);
-            fd.append("fileToUpload", document.getElementById('fileToUpload' + '_'
+            fd.append("fileToUpload", document.getElementById('indiceToUpload' + '_'
                     + ID2_file).files[0]);
 
             /* If you want to simply post the entire form, use this */
