preferencias fix visual

--- a/dev-plugins/bootstrapless/intranet/general.less
+++ b/dev-plugins/bootstrapless/intranet/general.less
@@ -44,3 +44,19 @@
     white-space: nowrap;
 }
 
+.buscadorPreferenciasClass{
+    float: right;
+    margin-top: -51px;
+}
+
+@media (max-width:800px){
+    .buscadorPreferenciasClass{
+        float: left;
+        margin-top: -95px;
+        position: absolute;
+    }
+
+    .fixed{
+        margin-top: 40px;
+    }
+}   
