--- a/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
@@ -31,13 +31,6 @@
 </script>
 
 <script type="text/javascript" src="/intranet-tmpl/includes/busquedaPreferencias.js"></script>
-   
-<style type="text/css"> 
-    .buscadorPreferenciasClass{
-        float: right;
-        margin-top: -51px;
-    }
-</style> 
 
 [% INCLUDE 'editorHTML.inc' %]
 
@@ -45,7 +38,7 @@
         action="[% url_prefix %]/admin/global/circ_config.pl?token=[% token %]" method="post"
         onsubmit="buttonPost('preferencias-submit');"
       >
-    <fieldset class="resultados_busqueda">
+    <fieldset class="resultados_busqueda fixed">
     <legend>[% "Administraci&oacute;n de preferencias de Circulaci&oacute;n" | i18n %]</legend>
 
         <div class="buscadorPreferenciasClass">
