--- a/dev-plugins/bootstrapless/opac/general.less
+++ b/dev-plugins/bootstrapless/opac/general.less
@@ -8,6 +8,15 @@
     max-width: 140px;
 }
 
+#opacLogo a {
+    max-height: 40px;
+    max-width: 140px;
+    float: left;
+}
+.white{
+    color: white !important;
+}
+
 legend {
   /*  font-size: 16.5px; */
 }
