Varios fixes en CSS

--- a/dev-plugins/bootstrapless/opac/general.less
+++ b/dev-plugins/bootstrapless/opac/general.less
@@ -52,3 +52,9 @@ legend {
 .darkGrey{
     color: @grayDarker;
 }
+
+.flexslider .slides > li {
+    display: none;
+    -webkit-backface-visibility: hidden;
+    margin:0 !important;
+}
