Fix en Detalle de estante virtual desde busqueda avanzada

--- a/intranet/htdocs/intranet-tmpl/estantes/verDetalleEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/verDetalleEstante.tmpl
@@ -136,7 +136,7 @@
                                         print C4::AR::Filtros::action_button(  
                                                                             button   => "btn btn-primary",
                                                                             action => 'agregarSubEstante();',
-                                                                            icon    => 'icon-white icon-ok'
+                                                                            icon    => 'icon-white icon-ok',
                                                                             title   => "[% ' Agregar Subestante' | i18n %]",
                                                                           
                                                 ) ;
