fecha en prestamo interbibliotecario

--- a/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
@@ -9,6 +9,8 @@
                 [% "BIBLIOTECA" | i18n  %]<br>
                 [% biblio.getNombrePDF %]<br><br><br>
             </div>
+
+            <p id="fecha" align="right">[% fecha %]
             <h2 align="center">[% "SOLICITUD DE PRESTAMO INTERBIBLIOTECARIO" | i18n %]<h2>
             <p id="fecha"></p>
             <div class="contenido">
