--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -245,7 +245,7 @@ $(document).ready( function() {
         
     <form id="formNivel2" name="formNivel2" class="form-horizontal" onsubmit="return false;">
 		  <fieldset>
-			    <legend class="titulo_legend">[% "Datos de la edici&oacute;n" | i18n %]
+			    <legend class="titulo_legend">[% "Datos del grupo" | i18n %]
     			     <div id="estado_accion" class="titulos estado_accion alert pagination-centered" style="display:none"></div>
 			    </legend>
 			    <!--     CAMPOS DINAMICOS DEL NIVEL 2 -->
